[package]
repository = "https://github.com/poly000/lolicon_api"
name = "lolicon_api"
license = "MIT"
authors = ["poly000"]
description = "Lolicon API wrapper in Rust"
version = "1.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
strum = { version = "0.26.3", features = ["derive"] }
