[package]
repository = "https://github.com/poly000/lolicon_api"
name = "lolicon_api"
license = "MIT"
authors = ["poly000"]
description = "Lolicon API wrapper in Rust"
version = "1.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.64"
strum = { version = "0.26.3", features = ["derive"] }
regex = { version = "1.10.6", optional = true }
serde = { version = "1.0.210", default-features = false, features = [
    "derive",
    "std",
], optional = true }

[features]
default = ["aspect-validate", "parse-resp"]
aspect-validate = ["dep:regex"]
parse-resp = ["dep:serde"]
